Fixed scrollBar behavior when changing window

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,14 +5,18 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 body {
+  border-spacing: 0;
   margin: 0;
   overflow-y: hidden;
   overflow-x: hidden;
+
+  background-color: red;
 }
 .main-page {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
+  margin: 0;
 }
 .main-page_vertical {
   display: flex;
@@ -20,6 +24,10 @@ body {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  white-space:nowrap;
+  margin: 0;
+
+  background-color: white;
 }
 .row * {
   display: inline;
@@ -28,11 +36,13 @@ body {
 .properties {
   text-align: center;
   min-width: 400px;
-  min-height: 300px;
+  min-height: 150px;
   width: 30%;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  background-color: white;
 }
 .properties__formula input {
   padding-left: 0.6em;
@@ -66,8 +76,8 @@ body {
   background-color: red;
   min-height: 0;
   min-width: 0;
-  width: 300px;
-  height: 500px;
+  width: 10px;
+  height: 10px;
   margin: 0;
   padding: 0;
 }
